fix: 1px difference (with too narrow h2)

--- a/css/styles.css
+++ b/css/styles.css
@@ -366,7 +366,13 @@ blockquote {
 
 .md-item,
 .file-text {
-  padding: 8px 10px 11px 10px;
+  padding: 7px 10px 12px 10px;
+  line-height: 19px;
+}
+
+.file-name,
+.file-size {
+  line-height: 19px;
 }
 
 #preview,
